2004-08-01  Andrey Slusar <anray@users.sourceforge.net>

	* configure.in: total rewrite and fix more bugs
	* src/toss/ftnexpire.c: fix format warnings
	* src/toss/ftntoss.c: fix format warnings
	* src/tick/ftnhatch.c: fix format warnings
	* src/tick/ftntick.c: fix format warnings
	* src/common/histdb.c: fix format warnings
	* src/common/log.c: fix incompatible type warning
	* src/common/tick.c: fix format warnings

2004-07-23  Andrey Slusar <anray@users.sourceforge.net>

	* src/gate/rfc2ftn.c: fix FTS_VIA(thanks to
	    Alex Soukhotine)

2004-07-22  Andrey Slusar <anray@users.sourceforge.net>

	* src/gate/ftninpost.c: change system() to
	    portable run_system()

2004-07-20  Andrey Slusar <anray@users.sourceforge.net>

	* configure.in: change innconfval -s parsing

2004-07-12  Andrey Slusar <anray@users.sourceforge.net>

	* src/toss/ngoper.c: if AutoCreateRenumberCmd not
	    defined, this is silently skipped
	* src/gate/send-fidogate.in: fixed confval warning

2004-07-09  Andrey Slusar <anray@users.sourceforge.net>

	======= Release 5.1.1ds =============================
	------- CVS tag R511 --------------------------------
	* version.h: update to stable 5.1.1ds
	* configure.h.in: update to stable 5.1.1ds

2004-07-05  Andrey Slusar <anray@users.sourceforge.net>

	* doc/README.ru: update
	* doc/FAQ.ru: update
	* src/common/binkley.c: if enable AMIGADOS_4D_OUTBOUND,
	    then using outbound for default zone
	* src/toss/ftnpack.c: if enable AMIGADOS_4D_OUTBOUND,
	    then using outbound for default zone
	* src/toss/ftnroute.c: if enable AMIGADOS_4D_OUTBOUND,
	    then using outbound for default zone
	* src/gate/ftn2rfc.c: fix SingleArticles

2004-06-15  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* version.h: update to 5.1.1ds-rc5
	* packages/freebsd: update
	* src/toss/runinc.c: add -c option, if tmpunpack
	    dirs not exsist, create it
	* src/areafix/areafix.c: fix traping cmd_listall

2004-06-11  Andrey Slusar <rusfidogate@users.sourceforge.net>
