@@ -1,3 +1,9 @@
+2004-08-07  Andrey Slusar <anray@users.sourceforge.net>
+
+	* configure.in: fix default prefix
+	* src/gate/Makefile.am: fix build with not default
+	    owner and group(thanks to Max Boyarov)
+
 2004-08-01  Andrey Slusar <anray@users.sourceforge.net>
 
 	* configure.in: total rewrite and fix more bugs
